Heder changes;new html generate script.

--- a/latex/ch1/structure.tex
+++ b/latex/ch1/structure.tex
@@ -20,7 +20,7 @@
 
 \usepackage[utf8]{inputenc} % Required for inputting international characters
 \usepackage[UTF8]{ctex}
-\usepackage{titlesec}
+%\usepackage{titlesec}
 \usepackage[T1]{fontenc} % Output font encoding for international characters
 
 \usepackage[osf]{libertine} % Use the Libertine font
@@ -72,7 +72,7 @@
 \renewcommand{\partnamefont}{\centering\sffamily\itshape\Huge} % Part name font specification
 \renewcommand{\partnumfont}{\sffamily\Huge} % Part number font specification
 \renewcommand{\parttitlefont}{\centering\sffamily\scshape} % Part title font specification
-\renewcommand{\beforepartskip}{\null\vskip.0\textheight} % Whitespace above the part heading
+\renewcommand{\beforepartskip}{\null\vskip.618\textheight} % Whitespace above the part heading
 
 %----------------------------------------------------------------------------------------
 %	CHAPTER FORMAT
